# AplicacionProducto.API/AplicacionProducto/Models/ProductosContext.cs
@@ -1,15 +1,0 @@
-﻿using Microsoft.EntityFrameworkCore;
-
-namespace AplicacionProducto.Models
-{
-
-    public class ProductosContext : DbContext
-    {
-        public ProductosContext(DbContextOptions<ProductosContext> options) : base(options)
-        {
-        }
-
-        public DbSet<Productos> Productos { get; set; } = null!;
-    }
-}
-
